; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_bisect--helper.c_check_expected_revs.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_bisect--helper.c_check_expected_revs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**, i32)* @check_expected_revs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_expected_revs(i8** %0, i32 %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8** %0, i8*** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %24, %2
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %27

10:                                               ; preds = %6
  %11 = load i8**, i8*** %3, align 8
  %12 = load i32, i32* %5, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i8*, i8** %11, i64 %13
  %15 = load i8*, i8** %14, align 8
  %16 = call i32 @is_expected_rev(i8* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %23, label %18

18:                                               ; preds = %10
  %19 = call i32 (...) @git_path_bisect_ancestors_ok()
  %20 = call i32 @unlink_or_warn(i32 %19)
  %21 = call i32 (...) @git_path_bisect_expected_rev()
  %22 = call i32 @unlink_or_warn(i32 %21)
  br label %23

23:                                               ; preds = %18, %10
  br label %24

24:                                               ; preds = %23
  %25 = load i32, i32* %5, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %5, align 4
  br label %6

27:                                               ; preds = %6
  ret void
}

declare dso_local i32 @is_expected_rev(i8*) #1

declare dso_local i32 @unlink_or_warn(i32) #1

declare dso_local i32 @git_path_bisect_ancestors_ok(...) #1

declare dso_local i32 @git_path_bisect_expected_rev(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
